# PrimRaytracer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
engine/: engine.sln
engine/data/box/: box.gltf
engine/engine/: Application.cpp  Application.h  Config.h  Enum.cpp  Enum.h  FBO.cpp  FBO.h  GLProgram.cpp  GLProgram.h  GLRenderer.cpp  GLRenderer.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  Image.cpp  Image.h  Program.cpp  Program.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  engine.vcxproj  engine.vcxproj.filters  main.cpp
engine/engine/Scene/: Camera.cpp  Camera.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  Scene.cpp  Scene.h
engine/engine/Utils/: Log.cpp  Log.h  LogTest.h  Timer.cpp  Timer.h  Type.h  Utils.cpp  Utils.h
engine/math/: main.cpp  math.h  math.vcxproj  math.vcxproj.filters
engine/math/math/: matrix.h  quaternion.h  types.h  vector.h
engine/ray-engine/: Accelerator.cpp  Accelerator.h  Application.cpp  Application.h  Atmosphere.cpp  Atmosphere.h  BVH.cpp  BVH.h  BoundingBox.cpp  BoundingBox.h  Camera.cpp  Camera.h  Config.h  GUI.cpp  GUI.h  Hitable.cpp  Hitable.h  Light.cpp  Light.h  Location.h  Material.cpp  Material.h  Math.h  Matrix3.h  Matrix4.h  NoAccel.cpp  NoAccel.h  Octree.cpp  Octree.h  Onb.h  Parallelogram.cpp  Parallelogram.h  PathTracer.cpp  PathTracer.h  Physics.h  PinholeCamera.cpp  PinholeCamera.h  PixelBuffer.cpp  PixelBuffer.h  PointLight.cpp  (+33 more)
engine/ray-engine/Utils/: Log.cpp  Log.h  Type.h  Utils.cpp  Utils.h
engine/ray-engine/imgui/: imconfig.h
engine/ray-exe/: main.cpp  ray-exe.vcxproj
engine/raycore/: Accelerator.cpp  Accelerator.h  BSDF.cpp  BSDF.h  BVH.cpp  BVH.h  BoundingBox.cpp  BoundingBox.h  Camera.cpp  Camera.h  Checker.cpp  Checker.h  Config.cpp  Config.h  ConstantTexture.cpp  ConstantTexture.h  Fresnel.h  GLTFLoader.cpp  GLTFLoader.h  Glass.cpp  Glass.h  Hitable.cpp  Hitable.h  Light.cpp  Light.h  LightDistribution.cpp  LightDistribution.h  Loader.cpp  Loader.h  Location.h  Material.cpp  Material.h  Mathematic.h  Matte.cpp  Matte.h  Mesh.cpp  Mesh.h  MeshBVH.cpp  MeshBVH.h  MeshOctree.cpp  (+68 more)
engine/raycore/Utils/: Log.h  Timer.cpp  Timer.h  Type.h
engine/raycore/math/: angle.h  angle.inl  color32.h  color32.inl  color4.h  colorHDR.h  colorHDR.inl  geometry.h  mat3.h  mat3.inl  mat4.h  mat4.inl  norm3.h  norm3.inl  point3.h  point3.inl  print.h  quat.h  quat.inl  sampling.h  scientific.h  scientific.inl  uv2.h  uv2.inl  vec2.h  vec2.inl  vec3.h  vec3.inl
engine/shaders/: shader.frag  shader.vert  simpleShader.frag  simpleShader.vert
prim/: prim.sln
prim/prim/: BSDF.cpp  BSDF.h  BoundingBox.cpp  BoundingBox.h  Camera.cpp  Camera.h  Checker.cpp  Checker.h  CheckerTexture.cpp  CheckerTexture.h  Config.cpp  Config.h  ConstantTexture.cpp  ConstantTexture.h  Fresnel.h  GLTFLoader.cpp  GLTFLoader.h  Glass.cpp  Glass.h  Hitable.cpp  Hitable.h  ImageTexture.cpp  Intersection.cpp  Intersection.h  Light.cpp  Light.h  LightDistribution.cpp  LightDistribution.h  Loader.h  Location.h  Material.h  Matte.cpp  Matte.h  Mesh.cpp  Mesh.h  MeshBVH.cpp  MeshBVH.h  MeshOctree.cpp  MeshOctree.h  Metal.cpp  (+50 more)
prim/prim-exe/: main.cpp  prim-exe.vcxproj
prim/prim-viewer/: Application.cpp  Application.h  Config.h  GUI.cpp  GUI.h  imgui.ini  main.cpp  prim-viewer.vcxproj
prim/prim/math/: angle.h  angle.inl  color4.h  color4.inl  gpu.h  gpu.inl  half.inl
src/: Viewer.cpp  Viewer.h  main.cpp
src/Editor/: EditorUI.cpp  EditorUI.h  SceneUI.cpp  SceneUI.h
src/Prim/: BSDF.cpp  BSDF.h  BoundingBox.cpp  Camera.h  Config.h  ConstantTexture.cpp  ConstantTexture.h  Fresnel.h  GLTFLoader.cpp  GLTFLoader.h  Glass.cpp  Glass.h  Hitable.cpp  Hitable.h  ImageTexture.h  Light.h  LightDistribution.cpp  Material.h  Matte.cpp  Mesh.h  MeshBVH.cpp  MeshOctree.cpp  OBJLoader.cpp  OBJLoader.h  PathTracer.cpp  PerspectiveCamera.cpp  PerspectiveCamera.h  PointLight.h  Ray.cpp  Renderer.cpp  Scene.h  ShapeLight.h  ShapeSphere.h  Sphere.cpp  Texture.h  ThreadPool.cpp  ThreadPool.h  Time.h  Transform.h  TransformNode.h  (+3 more)
src/Prim/Core/: BSDF.h  BoundingBox.cpp  BoundingBox.h  Camera.cpp  Camera.h  Fresnel.h  Geometry.h  Intersection.cpp  Intersection.h  Loader.cpp  Loader.h  Material.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Shape.h  Texture.h  Transform.cpp  Transform.h
src/Prim/Scene/Camera/: OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
src/Prim/Scene/Hitable/: Mesh.cpp  Mesh.h  MeshBVH.cpp  MeshBVH.h  MeshOctree.cpp  MeshOctree.h  (+5 more)
src/Prim/Shape/: ShapeDisk.cpp  ShapeDisk.h  ShapeSphere.cpp  ShapeSphere.h
src/Prim/Tracer/: PathTracer.cpp  PathTracer.h  WhittedTracer.cpp  WhittedTracer.h
(+19 files in other folders)
